<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="_continue">Devam</string>
    <string name="accept">Accept</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_another_product">Başka Bir Ürün Ekle</string>
    <string name="add_current_address">Bulunduğum Adresi Ekle</string>
    <string name="add_new_product">Yeni Ürün Ekle</string>
    <string name="add_reminder">Hatırlatma Ekle</string>
    <string name="address">Adres</string>
    <string name="address_depiction">Adres Tarifi</string>
    <string name="address_edit">Adres Düzenle</string>
    <string name="address_false">Adres Yanlış</string>
    <string name="address_label">Adres Adı</string>
    <string name="address_record">Adres Kayıt</string>
    <string name="address_true">Adres Doğru</string>
    <string name="address_update">Adresi Güncelle</string>
    <string name="announcements_and_news">Duyurular &amp; Haberler</string>
    <string name="app_name">Pınar Su</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="building_name">Apartman Adı</string>
    <string name="building_number">Bina No</string>
    <string name="buy">Satın Alma</string>
    <string name="calendar">Takvim</string>
    <string name="call">Ara</string>
    <string name="campaigns">Kampanyalar</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="certificate_name">PinarSuCertificate</string>
    <string name="certificate_subject">CN=*.yasar.com.tr,O=Yasar Holding,L=izmir,ST=izmir,C=TR</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="city">İl</string>
    <string name="com.crashlytics.android.build_id">15f6dd71-4239-478d-ad54-840119f8b2b9</string>
    <string name="confirmation">Onay</string>
    <string name="contact_permission">İletişim İzni</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="current_address">Geçerli Adres</string>
    <string name="date_range">Tarih Aralığı</string>
    <string name="decline">Decline</string>
    <string name="delete">Sil</string>
    <string name="delivery_hours">Teslimat Saatleri</string>
    <string name="desc">Açıklama</string>
    <string name="desc1">Açıklama 1</string>
    <string name="desc2">Açıklama 2</string>
    <string name="district">Mahalle</string>
    <string name="do_login">Giriş Yapın</string>
    <string name="door_number">Kapı No</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="edit">Düzenle</string>
    <string name="error">Hata oluştu</string>
    <string name="exit">Çıkış</string>
    <string name="fill_survey">Anketi Doldur</string>
    <string name="find_record">Kayıt Bulundu</string>
    <string name="first_name">Ad</string>
    <string name="gcm_defaultSenderId">651187859667</string>
    <string name="give_order">Sipariş Ver</string>
    <string name="google_api_key">AIzaSyDKPyF_83Xf5dEkbIiDILBgCfTD_We7v8E</string>
    <string name="google_app_id">1:651187859667:android:bc1fe38f0eb94d3e</string>
    <string name="google_crash_reporting_api_key">AIzaSyDKPyF_83Xf5dEkbIiDILBgCfTD_We7v8E</string>
    <string name="i_accepted_lower">kabul ediyorum</string>
    <string name="last_name">Soyad</string>
    <string name="last_order">Son Sipariş</string>
    <string name="last_order_repeat">Son Siparişi Tekrarla</string>
    <string name="login">Giriş</string>
    <string name="login_description">"Giriş Yapmak için Pınar Su'ya kayıtlı ev telefon numaranızı veya cep telefonu numaranızı giriniz"</string>
    <string name="login_info_error">Giriş Bilgileri Yanlış</string>
    <string name="match_success">Eşleşme Başarılı</string>
    <string name="my_registered_address">Kayıtlı Adreslerim</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="no">Hayır</string>
    <string name="no_internet_connection">Bağlantı yapılamadı. Lütfen internet bağlantınızı kontrol ediniz.</string>
    <string name="no_record">Kayıt yok</string>
    <string name="ok">Tamam</string>
    <string name="order">Sipariş</string>
    <string name="order_summary">Sipariş Özeti</string>
    <string name="price">Fiyat</string>
    <string name="privacy_agreement">Gizlilik Sözleşmesini</string>
    <string name="product_quantity">Ürün Adedi</string>
    <string name="product_type">Ürün Türü</string>
    <string name="products">Ürünler</string>
    <string name="profile">Profil</string>
    <string name="push_notification">Anlık Bildirim İzni</string>
    <string name="record">Kayıt</string>
    <string name="reminders">Hatırlatmalar</string>
    <string name="reminding">Hatırlatma</string>
    <string name="reminding_note">Hatırlatma Notu</string>
    <string name="reminding_title">Hatırlatma Başlığı</string>
    <string name="save">Kaydet</string>
    <string name="send">Gönder</string>
    <string name="service_error">Pınar Su servislerine ulaşılamadı. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="service_live_url_file">/sap/bc/srt/rfc/sap/zsdb_app/444/zsdb_app/zsdb_app</string>
    <string name="service_live_url_host">psbmobilesip.yasar.com.tr</string>
    <string name="street">Sokak</string>
    <string name="town">İlçe</string>
</resources>