<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.pinarsu.siparis.view.TextView android:textStyle="bold" android:textColor="@color/blue_dark" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_type" android:layout_weight="2.0" android:textAllCaps="true" />
        <com.pinarsu.siparis.view.TextView android:textStyle="bold" android:textColor="@color/blue_dark" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/price" android:layout_weight="1.0" android:textAllCaps="true" />
        <com.pinarsu.siparis.view.TextView android:textStyle="bold" android:textColor="@color/blue_dark" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/product_quantity" android:layout_weight="2.0" android:textAllCaps="true" />
    </LinearLayout>
    <ListView android:id="@id/lv" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@null" android:layout_weight="1.0" />
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/imAddAnotherProduct" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:src="@drawable/add_another_product" android:scaleType="fitCenter" android:adjustViewBounds="true" />
    <com.pinarsu.siparis.view.TextView android:textSize="18.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tvContinue" android:background="@color/blue_dark" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/_continue" />
</LinearLayout>