<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/toolbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/address_label" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.EditText android:id="@id/edAddressLabel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/first_name" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.EditText android:id="@id/edFirstName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/last_name" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.EditText android:id="@id/edLastName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/city" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <Spinner android:id="@id/spinCity" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="14.0dip" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/town" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <Spinner android:id="@id/spinTown" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/district" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <Spinner android:id="@id/spinDistrict" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/street" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                <Spinner android:id="@id/spinStreet" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/building_name" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.EditText android:id="@id/edBuildingName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/door_number" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                    <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                    <com.pinarsu.siparis.view.EditText android:gravity="center" android:id="@id/edDoorNumber" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
                </LinearLayout>
                <View android:background="@color/line_color" android:layout_width="1.0sp" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/building_number" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                    <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="* " style="@style/mediumTvStyle" />
                    <com.pinarsu.siparis.view.EditText android:gravity="center" android:id="@id/edBuildingNumber" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" style="@style/mediumEdStyle" />
                </LinearLayout>
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <com.pinarsu.siparis.view.TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/address_depiction" android:layout_weight="2.0" style="@style/mediumTvStyle" />
                <com.pinarsu.siparis.view.EditText android:id="@id/edAddressDepiction" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:ems="10" android:layout_weight="5.0" android:inputType="textMultiLine" style="@style/mediumEdStyle" />
            </LinearLayout>
            <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:text="(*) işareti ile belirtilmiş alanların tümünü doldurunuz." style="@style/mediumTvStyle" />
            <LinearLayout android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/cBoxPrivacyAgreement" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/app_name" style="@style/mediumTvStyle" />
                <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/linearPrivacyAgreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip">
                    <com.pinarsu.siparis.view.TextView android:textStyle="bold" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_agreement" style="@style/mediumTvStyle" />
                    <View android:background="#ff333333" android:clickable="false" android:layout_width="fill_parent" android:layout_height="1.0sp" />
                </LinearLayout>
                <com.pinarsu.siparis.view.TextView android:textSize="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/i_accepted_lower" style="@style/mediumTvStyle" />
            </LinearLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <FrameLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/frameAddCurrentAddress" android:background="@color/blue_light" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="12.0dip">
                    <com.pinarsu.siparis.view.TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tvAdd" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save" />
                    <ProgressBar android:layout_gravity="center|right" android:id="@id/progressBar" android:visibility="invisible" android:layout_width="32.0dip" android:layout_height="32.0dip" android:indeterminate="false" />
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>