<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/linearParent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip">
        <ImageView android:gravity="center_horizontal" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/search_blue" android:text="@string/district" style="@style/mediumTvStyle" />
        <com.pinarsu.siparis.view.TextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/tvFoundRecord" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/find_record" style="@style/mediumTvStyle" />
    </LinearLayout>
    <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" android:layout_marginTop="12.0dip" />
    <com.pinarsu.siparis.view.TextView android:id="@id/tvTitle" android:background="#ffeeeeee" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/mediumTvStyle" />
    <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
    <com.pinarsu.siparis.view.TextView android:id="@id/tvAddress" android:background="#ffeeeeee" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/mediumTvStyle" />
    <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/linearAddressFalse" android:background="@color/blue_dark" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_margin="12.0dip" android:layout_weight="1.0">
            <com.pinarsu.siparis.view.TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/address_false" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/linearAddressTrue" android:background="@color/blue_light" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_margin="12.0dip" android:layout_weight="1.0">
            <com.pinarsu.siparis.view.TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/address_true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>