<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linearParent" android:background="@drawable/water_back" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/toolbar" />
    <com.pinarsu.siparis.view.TextView android:textSize="18.0dip" android:textStyle="bold" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:layout_marginBottom="12.0dip" android:text="@string/login" style="@style/mediumTvStyle" />
    <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" android:layout_marginTop="12.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="#ffeeeeee" android:paddingLeft="12.0dip" android:paddingTop="24.0dip" android:paddingRight="12.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.pinarsu.siparis.view.EditText android:textSize="14.0dip" android:gravity="center" android:id="@id/edPhoneNumber" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="Telefon numaranızı başında sıfır olmadan giriniz" android:maxEms="10" android:ems="10" android:singleLine="true" android:maxLength="10" android:layout_weight="3.0" android:inputType="phone" style="@style/mediumEdStyle" />
    </LinearLayout>
    <View android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0sp" />
    <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/linearLogin" android:background="@color/blue_light" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_margin="24.0dip" android:layout_marginTop="24.0dip">
        <com.pinarsu.siparis.view.TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/white" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/do_login" />
    </LinearLayout>
    <com.pinarsu.siparis.view.TextView android:textSize="16.0dip" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="36.0dip" android:layout_marginRight="36.0dip" android:text="@string/login_description" style="@style/mediumTvStyle" />
</LinearLayout>